--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,7 @@ UniGraphics/Fractals/FractalsView.xaml.cs.orig
 .vs/UniGraphics/v15/Server/sqlite3/storage.ide
 .vs/UniGraphics/v15/Server/sqlite3/storage.ide-shm
 .vs/UniGraphics/v15/Server/sqlite3/storage.ide-wal
+.vs/UniGraphics/v16/Server/sqlite3/db.lock
+.vs/UniGraphics/v16/Server/sqlite3/storage.ide
+.vs/UniGraphics/v16/Server/sqlite3/storage.ide-shm
+.vs/UniGraphics/v16/Server/sqlite3/storage.ide-wal
