--- a/UniGraphics/UniGraphics.csproj
+++ b/UniGraphics/UniGraphics.csproj
@@ -84,6 +84,18 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="StudyMaterials\AnimationsStudy.xaml.cs">
+      <DependentUpon>AnimationsStudy.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="StudyMaterials\ColorModelsStudy.xaml.cs">
+      <DependentUpon>ColorModelsStudy.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="StudyMaterials\FractalsStudy.xaml.cs">
+      <DependentUpon>FractalsStudy.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="StudyWindow.xaml.cs">
+      <DependentUpon>StudyWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ViewModels\ColorModelsViewModel.cs" />
     <Compile Include="ViewModels\Command.cs" />
     <Compile Include="ViewModels\DataViewModel.cs" />
@@ -141,6 +153,22 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="StudyMaterials\AnimationsStudy.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="StudyMaterials\ColorModelsStudy.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="StudyMaterials\FractalsStudy.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="StudyWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -191,9 +219,7 @@
   <ItemGroup>
     <Resource Include="Resources\Icons\exit.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="StudyMaterials\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
