All help is ready. Made study materials. Add button back and button convert on color models, as teacher likes

--- a/UniGraphics/UniGraphics.csproj
+++ b/UniGraphics/UniGraphics.csproj
@@ -234,6 +234,21 @@
   <ItemGroup>
     <Resource Include="Resources\Fractal4.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\HSL.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\RGB1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\RGB2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\colormodels.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\back.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
