--- a/UniGraphics/UniGraphics.csproj
+++ b/UniGraphics/UniGraphics.csproj
@@ -268,6 +268,15 @@
   <ItemGroup>
     <Resource Include="Resources\pause.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\movematrix.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\scalematrix.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\turnmatrix.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
