Added images to buttons, cursor hand

--- a/UniGraphics/UniGraphics.csproj
+++ b/UniGraphics/UniGraphics.csproj
@@ -289,6 +289,18 @@
     <Resource Include="Resources\pause.png" />
     <Resource Include="Resources\start.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\affine.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\newton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\rgb.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\hexagon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
